<resources>
    <string name="app_name">Programele</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signuphere">Neturite paskyros? Prisiregistruokite</string>
    <string name="login">Prisijungimas</string>
    <string name="password">Slaptažodis</string>
    <string name="username">Vartotojas</string>
    <string name="loginhere">Jau turite paskyrą? Prisijunkite</string>
    <string name="signup">Registracija</string>
    <string name="email">El.Paštas</string>
    <string name="fullname">Vardas Pavardė</string>

    <string name="pirmasPat">Taupesni prietaisai kainuoja daugiau, bet ir leidžia jums daugiau
        sutaupyti. Pavyzdžiui, A+++ klasės skalbimo mašina vienuolikos metų
        laikotarpyje sunaudos maždaug 75 eurais mažiau elektros nei A+ klasės. O
        A+++ klasės šaldiklis per savo gyvavimo laiką jums sutaupys net 370 eurų,
        lyginant su A+ prietaisu. Pagalvokit, kiek prietaisų namie turite. Jei jie žemos
        energetinės klasės, kalba eina jau ne apie dešimtis, o šimtus eurų.
    </string>
    <string name="pirmasIz">
        1. Rinkitės aukšto energetinio efektyvumo prietaisus
    </string>

    <string name="antrasPat">Pasikeitus
        senovines lemputes į LED technologiją, elektros išlaidas apšvietimui galite
        sumažinti 50–90 %. Tradicinę 60 vatų lemputę pakeitę 10 vatų LED, per metus
        galite susimažinti elektros sąskaitą net iki 15 eurų. Ir čia tik viena lemputė!
        Beje, nors LED lemputės brangesnės, jos ir tarnauja ilgiau, tad ilguoju
        laikotarpiu vis tiek sutaupote.
    </string>
    <string name="antrasIz">
        2. Pasikeiskite senas lemputes į LED
    </string>

    <string name="treciasPat">
        Prietaisai jūsų namuose, veikdami budėjimo režimu
        nuolat naudoja elektros energiją. Kiekvieną mėnesį mokate už nesinaudojimą
        prietaisais. „Energy Saving Trust“ duomenimis, vien prisimindami iš tinklo išjungti prietaisus, per
        metus galite sutaupyti iki 35 eurų. Taigi išjungę be reikalo įjungtas šviesas, nuo
        vienos lemputės kas valandą sutaupote po centą.
    </string>
    <string name="treciasIz">
        3. Nenaudojamus prietaisus išjunkite iš tinklo
    </string>

    <string name="ketvirtasPat">
        Skalbimo mašiną junkite tik tada, kai ji pilna. Pusiau
        prikrauta ji sunaudoja tiek pat elektros ir karšto vandens kiek pilna. Tiesą
        sakant, skalbimo mašina daugiausiai energijos sunaudoja vandens kaitinimui.
        Skalbdami savo drabužius žemesnės temperatūros vandenyje, per metus galite
        sutaupyti apie 80 eurų.
    </string>
    <string name="ketvirtasIz">
        4. Skalbkite ekonomiškai
    </string>

    <string name="penktasPat">
        Šaldytuve pasirinkite optimalią temperatūrą. Maistui laikyti pakanka 3 laipsnių šilumos, o šaldiklyje 18 laipsnių šalčio.
        Reguliariai atitirpinkite šaldikį. Puikus ženklas tai daryti,
        jei susidarė 5 mm ledo sluoksnis. Kuo daugiau šaldiklyje ledo,
        tuo daugiau sunaudojama elektros energijos.
    </string>
    <string name="penktasIz">
        5. Pasirūpinkite savo šaldytuvu.
    </string>

    <string name="sestasPat">
        Kodėl nepasinaudojus nemokama atsinaujinančia energija iš gamtos? Tai nebūtinai turi būti vėjo jėgainė jūsų kieme ar vandens malūnas upelyje. Saulės elektrinės tiek ištobulėjo, kad jas įsirengus ant namų stogo, per metus elektros išlaidos tampa 3 kartus mažesnė.
    </string>
    <string name="sestasIz">
        6. Įsirenkite alternatyvios energijos sprendimą.
    </string>

    <string name="add_devices">Įtraukti prietaisą</string>
    <string name="choose_group">Pasirinkti vartojimo klasę</string>
    <string name="ivestiprietaisa">Įveskite prietaiso pavadinimą</string>
    <string name="energija">Suvartojama energija (kWh)</string>
    <string name="atsakymas">Įrašymo atsakymas bus pateiktas čia</string>
    <string name="atgal_pagrindinis">Grįžti atgal į pagrindinį</string>
    <string name="adviceFirst">Pasikeitus senovines lemputes į LED technologiją, elektros išlaidas apšvietimui galite sumažinti 50–90 %. Tradicinę 60 vatų lemputę pakeitę 10 vatų LED, per metus galite susimažinti elektros sąskaitą net iki 15 eurų.</string>
    <string name="adviceSecond">Prietaisai, veikdami budėjimo režimu nuolat naudoja elektros energiją, todėl kiekvieną mėnesį mokate už nesinaudojimą prietaisais. „Energy Saving Trust“ duomenimis, vien prisimindami iš tinklo išjungti prietaisus, per metus galite sutaupyti iki 35 eurų.</string>
    <string name="adviceThird">Skalbimo mašiną junkite tik tada, kai ji pilna. Pusiau prikrauta ji sunaudoja tiek pat elektros ir karšto vandens kiek pilna. Skalbdami savo drabužius žemesnės temperatūros vandenyje, per metus galite sutaupyti apie 80 eurų.</string>

    <string name="facebook_app_id">576937303644400</string>
    <string name="fb_login_protocol_scheme">fb576937303644400</string>
    <string name="facebook_client_token">009717902777d18c39f36802a0d33ec9</string>

    <string-array name="deviceEfficiency">
        <item>Nesu tikras</item>
        <item>A+++</item>
        <item>A++</item>
        <item>A+</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
    </string-array>

    <string-array name="deviceType">
        <item>Lemputė</item>
        <item>Šaldytuvas</item>
        <item>Šaldiklis</item>
        <item>Orkaitė</item>
        <item>Mikrobangų krosnelė</item>
        <item>Arbatinukas</item>
        <item>Televizorius</item>
        <item>Skalbimo mašina</item>
        <item>Kondicionierius</item>
        <item>Kita</item>
    </string-array>

    <string-array name="time">
        <item>Iki 30 minučių</item>
        <item>1 valanda</item>
        <item>1 valanda 30 minučių</item>
        <item>2 valandos</item>
        <item>2 valandos 30 minučių</item>
        <item>3 valandos</item>
        <item>3 valandos 30 minučių</item>
        <item>4 valandos</item>
        <item>4 valandos 30 minučių</item>
        <item>5 valandos</item>
        <item>5 valandos 30 minučių</item>
        <item>6 valandos</item>
        <item>6 valandos 30 minučių</item>
        <item>7 valandos</item>
        <item>7 valandos 30 minučių</item>
        <item>8 valandos</item>
        <item>8 valandos 30 minučių</item>
        <item>9 valandos</item>
        <item>9 valandos 30 minučių</item>
        <item>10 valandų</item>
        <item>10 valandų 30 minučių</item>
        <item>11 valandų</item>
        <item>11 valandų 30 minučių</item>
        <item>12 valandų</item>
        <item>12 valandų 30 minučių</item>
        <item>13 valandų</item>
        <item>13 valandų 30 minučių</item>
        <item>14 valandų</item>
        <item>14 valandų 30 minučių</item>
        <item>15 valandų</item>
        <item>15 valandų 30 minučių</item>
        <item>16 valandų</item>
        <item>16 valandų 30 minučių</item>
        <item>17 valandų</item>
        <item>17 valandų 30 minučių</item>
        <item>18 valandų</item>
        <item>18 valandų 30 minučių</item>
        <item>19 valandų</item>
        <item>19 valandų 30 minučių</item>
        <item>20 valandų</item>
        <item>20 valandų 30 minučių</item>
        <item>21 valanda</item>
        <item>21 valanda 30 minučių</item>
        <item>22 valandos</item>
        <item>22 valandos 30 minučių</item>
        <item>23 valandos</item>
        <item>23 valandos 30 minučių</item>
        <item>24 valandos</item>

    </string-array>

</resources>

