<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

     <TextView
            android:id="@+id/textView"
            android:layout_width="277dp"
            android:layout_height="56dp"
            android:layout_marginTop="148dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/add_devices"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="277dp"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/choose_group"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/add_editAmount"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toStartOf="@id/add_editAmount"
            app:layout_constraintTop_toBottomOf="@+id/add_editAmount"

            tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/add_editTitle"
            android:layout_width="260dp"
            android:layout_height="42dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/ivestiprietaisa"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/add_editAmount"
            android:layout_width="260dp"
            android:layout_height="42dp"
            android:layout_marginTop="54dp"
            android:ems="10"
            android:hint="@string/energija"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/add_editTitle"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@+id/add_editTitle"
            app:layout_constraintTop_toBottomOf="@+id/add_editTitle" />

        <RadioGroup
            android:id="@+id/button"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add_editAmount"
            tools:layout_editor_absoluteX="0dp">

        </RadioGroup>


        <RadioButton
            android:id="@+id/aaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="A+++"
            app:layout_constraintBottom_toTopOf="@+id/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/aa"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <RadioButton
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="A+"
            app:layout_constraintBottom_toTopOf="@+id/confirm"
            app:layout_constraintEnd_toStartOf="@+id/aa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <RadioButton
            android:id="@+id/aa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="A++"
            app:layout_constraintBottom_toTopOf="@+id/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Įrašyti"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/atsakymas"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm" />
    </androidx.constraintlayout.widget.ConstraintLayout>